force-app/main/default/objects/sked__Job__c/sked__Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <displayFormat>JOB-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>