force-app/main/default/objects/sked__Job__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <description>This is a promoted field that will be shown on both the main page of the job as well as the mobile app. ARC Biomed requested to have this</description>
    <label>Alert!</label>
    <type>TextArea</type>
</CustomField>