force-app/main/default/objects/sked__Job__c/fields/sked__Abort_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked__Abort_Reason__c</fullName>
    <label>Abort Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer no show</fullName>
            </value>
            <value>
                <fullName>Cancelled by customer</fullName>
            </value>
            <value>
                <fullName>Appointment missed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>