force-app/main/default/objects/sked__Job__c/fields/sked__Actual_End__c.field-meta.xml
<CustomField>
    <fullName>sked__Actual_End__c</fullName>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>