force-app/main/default/objects/sked__Job__c/fields/sked__Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Actual_Start__c</fullName>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>