force-app/main/default/objects/sked__Job__c/fields/sked__Auto_Schedule__c.field-meta.xml
<CustomField>
    <fullName>sked__Auto_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If enabled in your Skedulo configuration, this will trigger Skedulo to auto-allocate and schedule this job to an appropriate timeslot and resource automatically.</inlineHelpText>
    <label>Auto Schedule</label>
    <type>Checkbox</type>
</CustomField>