force-app/main/default/objects/sked__Job__c/fields/sked__Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked__Completion_Notes__c</fullName>
    <label>Completion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>