force-app/main/default/objects/sked__Job__c/fields/sked__Contact__c.field-meta.xml
<CustomField>
    <fullName>sked__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the contact attached to this job - subject to change</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>