force-app/main/default/objects/sked__Job__c/fields/sked__Customer_Job_No__c.field-meta.xml
<CustomField>
    <fullName>sked__Customer_Job_No__c</fullName>
    <label>Customer Job No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>