force-app/main/default/objects/sked__Job__c/fields/sked__Dispatch_At_Time__c.field-meta.xml
<CustomField>
    <fullName>sked__Dispatch_At_Time__c</fullName>
    <inlineHelpText>If specified, this job will be automatically be dispatched within 5 minutes of the time specified. If set to a value in the past, will dispatch immediately.</inlineHelpText>
    <label>Dispatch At Time</label>
    <type>DateTime</type>
</CustomField>