force-app/main/default/objects/sked__Job__c/fields/sked__Duration__c.field-meta.xml
<CustomField>
    <fullName>sked__Duration__c</fullName>
    <description>duration (in minutes) of the job</description>
    <label>Duration</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>