force-app/main/default/objects/sked__Job__c/fields/sked__Estimated_End__c.field-meta.xml
<CustomField>
    <fullName>sked__Estimated_End__c</fullName>
    <label>Estimated End</label>
    <type>DateTime</type>
</CustomField>