force-app/main/default/objects/sked__Job__c/fields/sked__Estimated_Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Estimated_Start__c</fullName>
    <label>Estimated Start</label>
    <type>DateTime</type>
</CustomField>