force-app/main/default/objects/sked__Job__c/fields/sked__Finish__c.field-meta.xml
<CustomField>
    <fullName>sked__Finish__c</fullName>
    <label>Finish</label>
    <type>DateTime</type>
</CustomField>