force-app/main/default/objects/sked__Job__c/fields/sked__Follow_up_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked__Follow_up_Reason__c</fullName>
    <label>Follow up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Needs more time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>