force-app/main/default/objects/sked__Job__c/fields/sked__Is_Group_Event__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_Group_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this job is a group event that can have Attendees.</description>
    <label>Is Group Event</label>
    <type>Checkbox</type>
</CustomField>