force-app/main/default/objects/sked__Job__c/fields/sked__Job_Allocation_Count__c.field-meta.xml
<CustomField>
    <fullName>sked__Job_Allocation_Count__c</fullName>
    <description>a count of the joballocations associated</description>
    <label>Job Allocation Count</label>
    <summaryFilterItems>
        <field>sked__Job_Allocation__c.sked__Status__c</field>
        <operation>notEqual</operation>
        <value>Empty, Deleted, Declined</value>
    </summaryFilterItems>
    <summaryForeignKey>sked__Job_Allocation__c.sked__Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>