force-app/main/default/objects/sked__Job__c/fields/sked__Job_Status__c.field-meta.xml
<CustomField>
    <fullName>sked__Job_Status__c</fullName>
    <description>Internal Skedulo use only. Do not modify the default Picklist values.</description>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Pending Allocation</fullName>
            </value>
            <value>
                <fullName>Pending Dispatch</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>En Route</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>