force-app/main/default/objects/sked__Job__c/fields/sked__Min_Attendees__c.field-meta.xml
<CustomField>
    <fullName>sked__Min_Attendees__c</fullName>
    <description>The minimum number of Attendees that should be assigned to a group event job (informational). Must be &gt;= 0 if set.</description>
    <label>Min Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>