force-app/main/default/objects/sked__Job__c/fields/sked__Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>sked__Notes_Comments__c</fullName>
    <label>Notes and Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>