force-app/main/default/objects/sked__Job__c/fields/sked__Notify_By__c.field-meta.xml
<CustomField>
    <fullName>sked__Notify_By__c</fullName>
    <description>The datetime a notification should be sent to allocated resources.</description>
    <formula>sked__Start__c - (sked__NotifyPeriod__c / 24.0)</formula>
    <label>Notify By</label>
    <type>DateTime</type>
</CustomField>