force-app/main/default/objects/sked__Job__c/fields/sked__NotifyPeriod__c.field-meta.xml
<CustomField>
    <fullName>sked__NotifyPeriod__c</fullName>
    <description>The number of hours before the job starts, when a notification will be sent to allocated resources.</description>
    <label>Notify Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>