force-app/main/default/objects/sked__Job__c/fields/sked__Parent__c.field-meta.xml
<CustomField>
    <fullName>sked__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Follow-ups</relationshipLabel>
    <relationshipName>Followups</relationshipName>
    <type>Lookup</type>
</CustomField>