force-app/main/default/objects/sked__Job__c/fields/sked__Recurring_Schedule__c.field-meta.xml
<CustomField>
    <fullName>sked__Recurring_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recurring Schedule</label>
    <referenceTo>sked__Recurring_Schedule__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>