force-app/main/default/objects/sked__Job__c/fields/sked__Resource_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource_Hours_Worked__c</fullName>
    <description>Roll up of all the hours work on a job by all resources</description>
    <label>Resource Hours Worked</label>
    <summarizedField>sked__Job_Allocation__c.sked__Hours__c</summarizedField>
    <summaryForeignKey>sked__Job_Allocation__c.sked__Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>