force-app/main/default/objects/sked__Job__c/fields/sked__Resource_Requirement_Count__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource_Requirement_Count__c</fullName>
    <label>Resource Requirement Count</label>
    <summaryForeignKey>sked__Resource_Requirement__c.sked__Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>