force-app/main/default/objects/sked__Job__c/fields/sked__Schedule_Template__c.field-meta.xml
<CustomField>
    <fullName>sked__Schedule_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Template</label>
    <referenceTo>sked__Schedule_Template__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>