force-app/main/default/objects/sked__Job__c/fields/sked__Templated_Job__c.field-meta.xml
<CustomField>
    <fullName>sked__Templated_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Templated Job</label>
    <referenceTo>sked__Templated_Job__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>