force-app/main/default/objects/sked__Job__c/fields/sked__Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked__Timezone__c</fullName>
    <formula>sked__Region__r.sked__Timezone__c</formula>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>