force-app/main/default/objects/sked__Job__c/fields/sked__Virtual_Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>sked__Virtual_Meeting_Id__c</fullName>
    <description>The Id of the virtual meeting as provided by the virtual meeting api.</description>
    <label>Virtual Meeting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>