force-app/main/default/objects/sked__Job__c/fields/sked__Virtual_Meeting_Info__c.field-meta.xml
<CustomField>
    <fullName>sked__Virtual_Meeting_Info__c</fullName>
    <description>The extra information about the virtual meeting.</description>
    <label>Virtual Meeting Info</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>