force-app/main/default/objects/sked__Job__c/fields/sked__Virtual_Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>sked__Virtual_Meeting_URL__c</fullName>
    <description>The URL to join the virtual meeting related to the job.</description>
    <label>Virtual Meeting URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>