force-app/main/default/objects/sked__Job__c/fields/sked_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_End_Date__c</fullName>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>