force-app/main/default/objects/sked__Job__c/fields/sked_Actual_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_Start_Time__c</fullName>
    <label>Actual Start Time</label>
    <type>Time</type>
</CustomField>