force-app/main/default/objects/sked__Job__c/fields/sked_Address_Mismatched__c.field-meta.xml
<CustomField>
    <fullName>sked_Address_Mismatched__c</fullName>
    <formula>sked__Address__c !=  sked__Location__r.sked__Address__c  || 
sked__GeoLocation__Latitude__s != sked__Location__r.sked__GeoLocation__Latitude__s  || 
sked__GeoLocation__Longitude__s != sked__Location__r.sked__GeoLocation__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Mismatched</label>
    <type>Checkbox</type>
</CustomField>