force-app/main/default/objects/sked__Job__c/fields/sked_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Address_Postal_Code__c</fullName>
    <label>Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>