force-app/main/default/objects/sked__Job__c/fields/sked_APT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_APT_Quantity__c</fullName>
    <label>APT Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>