force-app/main/default/objects/sked__Job__c/fields/sked_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Cancellation_Reasons</valueSetName>
    </valueSet>
</CustomField>