force-app/main/default/objects/sked__Job__c/fields/sked_Cancellation_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked_Cancellation_Reason_Notes__c</fullName>
    <label>Cancellation Reason Notes</label>
    <type>TextArea</type>
</CustomField>