force-app/main/default/objects/sked__Job__c/fields/sked_Collections_Team_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>sked_Collections_Team_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collections Team Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_Job_Supervisors</relationshipName>
    <type>Lookup</type>
</CustomField>