force-app/main/default/objects/sked__Job__c/fields/sked_Equipment_Subtype__c.field-meta.xml
<CustomField>
    <fullName>sked_Equipment_Subtype__c</fullName>
    <label>Equipment Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Equipment_Subtype</valueSetName>
    </valueSet>
</CustomField>