force-app/main/default/objects/sked__Job__c/fields/sked_Exclude_from_Optimizer__c.field-meta.xml
<CustomField>
    <fullName>sked_Exclude_from_Optimizer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Optimizer</label>
    <type>Checkbox</type>
</CustomField>