force-app/main/default/objects/sked__Job__c/fields/sked_Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Finish_Time__c</fullName>
    <label>Finish Time</label>
    <type>Time</type>
</CustomField>