force-app/main/default/objects/sked__Job__c/fields/sked_Is_GeoLocation_Mismatched__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_GeoLocation_Mismatched__c</fullName>
    <formula>sked__GeoLocation__Latitude__s != sked__Location__r.sked__GeoLocation__Latitude__s
|| sked__GeoLocation__Longitude__s != sked__Location__r.sked__GeoLocation__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is GeoLocation Mismatched</label>
    <type>Checkbox</type>
</CustomField>