force-app/main/default/objects/sked__Job__c/fields/sked_Is_Manually_Created__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Manually_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manually Created</label>
    <type>Checkbox</type>
</CustomField>