force-app/main/default/objects/sked__Job__c/fields/sked_Manually_Created_From__c.field-meta.xml
<CustomField>
    <fullName>sked_Manually_Created_From__c</fullName>
    <label>Manually Created From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staffing Modal</fullName>
            </value>
            <value>
                <fullName>Drive Scheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>