force-app/main/default/objects/sked__Job__c/fields/sked_Other_Volunteer_Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Other_Volunteer_Adjustment_Reason__c</fullName>
    <description>Created this field as part of HRP-13119</description>
    <label>Other Volunteer Adjustment Reason</label>
    <type>TextArea</type>
</CustomField>