force-app/main/default/objects/sked__Job__c/fields/sked_Primary_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>sked_Primary_Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Scheduler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_Job_Schedulers</relationshipName>
    <type>Lookup</type>
</CustomField>