force-app/main/default/objects/sked__Job__c/fields/sked_Procedure_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Procedure_Type__c</fullName>
    <label>Procedure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Fixed_Site_Procedure_Type</valueSetName>
    </valueSet>
</CustomField>