force-app/main/default/objects/sked__Job__c/fields/sked_Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Resource_Roles</valueSetName>
    </valueSet>
</CustomField>