force-app/main/default/objects/sked__Job__c/fields/sked_Role_Certifications__c.field-meta.xml
<CustomField>
    <fullName>sked_Role_Certifications__c</fullName>
    <label>Role/Certifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>