force-app/main/default/objects/sked__Job__c/fields/sked_Shadow_Job__c.field-meta.xml
<CustomField>
    <fullName>sked_Shadow_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shadow Job</label>
    <referenceTo>sked_Shadow_Job__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>sked_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>