force-app/main/default/objects/sked__Job__c/fields/sked_Site_Logistics_To__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Logistics_To__c</fullName>
    <label>Site Logistics To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>