force-app/main/default/objects/sked__Job__c/fields/sked_Sponsor_Volunteer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_Sponsor_Volunteer_Quantity__c</fullName>
    <label>Sponsor Volunteer Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>