force-app/main/default/objects/sked__Job__c/fields/sked_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>