force-app/main/default/objects/sked__Job__c/fields/sked_System_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_System_Quantity__c</fullName>
    <label>System Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>