force-app/main/default/objects/sked__Job__c/fields/sked_Travel_Time2__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time2__c</fullName>
    <label>Travel Time 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>