force-app/main/default/objects/sked__Job__c/fields/sked_VAR_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>sked_VAR_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FS Recruitment team would need to see a a new field on the Volunteer Lock reason report to view the user who modified the Volunteer Adjustment Reason.</description>
    <label>VAR Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>